# blues_simple_vio

./: CMakeLists.txt  README.md  readme2.md
evo_result/: traj_data.tum
gtest/: camera_calibparam_test.cpp  img_processor_test.cpp  msckf_filter_func_test.cpp  msckf_filter_test.cpp
include/: cam_state.hpp  camera.hpp  feature_data.hpp  frame.hpp  img_processor.hpp  imu_measure.hpp  imu_state.hpp  map_feature.hpp  math_utils.hpp  msckf_filter.hpp
src/: camera.cpp  frame.cpp  img_processor.cpp  imu_measure.cpp  map_feature.cpp  msckf_filter.cpp
